# TPSOptimizationEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  opt.py  optimize.cpp
common/: CMakeLists.txt  CUDABuffer.cuh  common.cuh  csc.cpp  csc.h
docs/: IPOPTpseudocode
enzymeAutoGrad/: .calDVHLoss.cpp.swp  CMakeLists.txt  DVHLoss.cu  compile.sh  doseLoss.cu  gEUDLoss.cu  loss.h  uniformDoseLoss.cu
optEngine/: CMakeLists.txt  common.h  fista.cpp  fista.cu  fista.h  main.cpp  optEngine.cpp  optEngine.h  optimize.cpp  options.h  projection.cu
